--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   dio: ^5.4.3+1
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
+  screenshot: ^3.0.0
+  path_provider: ^2.1.3
+  share_plus: ^9.0.0
+  gallery_saver_plus: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   build_runner: ^2.4.9
   freezed: ^2.5.2
   json_serializable: ^6.8.0
