--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider: ^2.1.3
   share_plus: ^9.0.0
   gallery_saver_plus: ^3.0.1
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
