--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: blog_posting
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ">=3.2.3 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -42,10 +41,17 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
   screenshot: ^3.0.0
-  path_provider: ^2.1.3
+  path_provider: ^2.1.4
   share_plus: ^9.0.0
-  gallery_saver_plus: ^3.0.1
   flutter_secure_storage: ^4.2.1
+  tapioca:
+    git:
+      url: https://github.com/beomsuong/tapioca.git
+
+  image_picker: ^1.1.2
+  gallery_saver: ^2.3.2
+  path: ^1.9.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
@@ -67,7 +73,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
