--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   gallery_saver: ^2.3.2
   path: ^1.9.0
   permission_handler: ^11.3.1
+  video_trimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
